@@ -12,15 +12,19 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 class KeywordContentPostFilterTest {
-    UserPost userPost1 = new UserPost("Jane Smith",
+    UserPost userPost_Hello = new UserPost("Jane Smith",
             OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
             "Hello World!", 2);
 
-    UserPost userPost2 = new UserPost("Joe Bloggs",
+    UserPost userPost_Example_Post = new UserPost("Joe Bloggs",
+            OffsetDateTime.of(2020, 3, 10, 20, 22, 12, 0, ZoneOffset.UTC),
+            "Example Post", 3);
+
+    UserPost userPost_example_post = new UserPost("Joe Bloggs",
             OffsetDateTime.of(2020, 1, 3, 8, 53, 34, 0, ZoneOffset.UTC),
             "Another example post.", 1);
 
-    UserPost userPost3 = new UserPost("Joe Bloggs",
+    UserPost userPost_example_post2 = new UserPost("Joe Bloggs",
             OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
             "An example of a post \nwith lines breaks.", 3);
 
@@ -43,19 +47,58 @@ class KeywordContentPostFilterTest {
 
     @Test
     void filter_1ItemList_1ItemList() {
-        List<UserPost> inputList = List.of(userPost1);
-        List<UserPost> expected = List.of(userPost1);
+        List<UserPost> inputList = List.of(userPost_Hello);
+        List<UserPost> expected = List.of(userPost_Hello);
 
         List<UserPost> actual = new KeywordContentPostFilter("Hello").filter(inputList);
 
         assertEquals(expected, actual);
     }
 
+    @Test
+    void filter_1Item0Match_EmptyList() {
+        List<UserPost> inputList = List.of(userPost_Hello);
+        List<UserPost> expected = List.of();
+
+        List<UserPost> actual = new KeywordContentPostFilter("Test").filter(inputList);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void filter_3ItemsEmptyFilter_EmptyList() {
+        List<UserPost> inputList = Arrays.asList(userPost_Hello, userPost_Example_Post, userPost_example_post);
+        List<UserPost> expected = Collections.emptyList();
+
+        List<UserPost> actual = new KeywordContentPostFilter("").filter(inputList);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void filter_3Items0Match_EmptyList() {
+        List<UserPost> inputList = Arrays.asList(userPost_Hello, userPost_Example_Post, userPost_example_post);
+        List<UserPost> expected = Collections.emptyList();
+
+        List<UserPost> actual = new KeywordContentPostFilter("Test").filter(inputList);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void filter_3Items1Match_1Item() {
+        List<UserPost> inputList = Arrays.asList(userPost_Hello, userPost_Example_Post, userPost_example_post);
+        List<UserPost> expected = List.of(userPost_Hello);
+
+        List<UserPost> actual = new KeywordContentPostFilter("Hello").filter(inputList);
+
+        assertEquals(expected, actual);
+    }
 
     @Test
     void filter_3Items2Match_2Items() {
-        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Arrays.asList(userPost2, userPost3);
+        List<UserPost> inputList = Arrays.asList(userPost_Hello, userPost_Example_Post, userPost_example_post);
+        List<UserPost> expected = Arrays.asList(userPost_Example_Post, userPost_example_post);
 
         List<UserPost> actual = new KeywordContentPostFilter("post").filter(inputList);
 
@@ -63,22 +106,11 @@ class KeywordContentPostFilterTest {
     }
 
     @Test
-    void filter_3Items1Match_1Item() {
-        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = List.of(userPost1);
+    void filter_3Items3Match_3Items() {
+        List<UserPost> inputList = Arrays.asList(userPost_example_post2, userPost_Example_Post, userPost_example_post);
+        List<UserPost> expected = Arrays.asList(userPost_example_post2, userPost_Example_Post , userPost_example_post);
 
-        List<UserPost> actual = new KeywordContentPostFilter("Hello").filter(inputList);
-
-        assertEquals(expected, actual);
-    }
-
-
-    @Test
-    void filter_3Items0Match_EmptyList() {
-        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Collections.emptyList();
-
-        List<UserPost> actual = new KeywordContentPostFilter("").filter(inputList);
+        List<UserPost> actual = new KeywordContentPostFilter("post").filter(inputList);
 
         assertEquals(expected, actual);
     }
